<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--<group android:id="@+id/menu_group1">-->
        <!--<item-->
            <!--android:id="@+id/nav_history_record_main"-->
            <!--android:icon="@android:drawable/ic_menu_myplaces"-->
            <!--android:title="@string/menu_history_record">-->
        <!--</item>-->
    <!--</group>-->
    <!--<group android:id="@+id/menu_group2">-->
        <!--<item-->
            <!--android:id="@+id/nav_setting_main"-->
            <!--android:icon="@android:drawable/ic_menu_manage"-->
            <!--android:title="@string/menu_setting">-->
        <!--</item>-->
    <!--</group>-->
    <group android:id="@+id/menu_group3">
        <item
            android:id="@+id/nav_help_main"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/menu_help">
        </item>
    </group>
    <group android:id="@+id/menu_group4">
        <item
            android:id="@+id/nav_about_main"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_about">
        </item>
    </group>
    <group android:id="@+id/menu_group5">
        <item
            android:id="@+id/nav_share_main"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/menu_share">
        </item>
    </group>
</menu>