<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imageview_win_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/textview_type_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/this_record"/>
            <TextView
                android:id="@+id/textview_this_record_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="5dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/history_best_record"/>
            <TextView
                android:id="@+id/textview_history_time_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_margin="5dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/button_win_dialog_back"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/dialog_button_back"
            android:textColor="#ffffff"
            android:background="@drawable/win_dialog_button_bg"
            android:layout_marginRight="6dp" />

        <Button
            android:id="@+id/button_win_dialog_again"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/dialog_button_try_again"
            android:textColor="#ffffff"
            android:background="@drawable/win_dialog_button_bg"
            android:layout_marginLeft="6dp" />
    </LinearLayout>
</LinearLayout>